--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     sendValueAtPath(state, []);
 
-    mbwebapp.ports.getItemContentCmdPort.subscribe(function (args) {
+    mbwebapp.ports.askItemContentCmdPort.subscribe(function (args) {
         sendValueAtPath(state, args);
     })
 
