--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Elm • TodoMVC</title>
+    <title>Elm • Model-based Web App</title>
     <script type="text/javascript" src="main.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
