--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
           var valueId = createNewID()
           localStorage.setItem(valueId, JSON.stringify(shallowValue))
           localStorage.setItem(id, JSON.stringify(obj.splice(index,0,valueId))
+          mbwebapp.ports.itemAddedSubPort.send([id, index, value, valueId]);
         }
-        mbwebapp.ports.itemAddedSubPort.send([id, index, value]);
     });
 
     mbwebapp.ports.removeItemCmdPort.subscribe(function (args) {
