--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <script type="text/javascript">
 
     function reconstituteObject(id) {
-      var serializedShallowObject = localStorage.getItem(id);
-      var shallowObject = serializedShallowObject ? JSON.parse(serializedShallowObject) : 'ID NOT FOUND - please report';
+      var serializedShallowObject = localStorage.getItem(id)
+      var shallowObject = serializedShallowObject ? JSON.parse(serializedShallowObject) : 'ID NOT FOUND - please report'
       if (typeof shallowObject === 'string') {
         return shallowObject
       } else if (typeof shallowObject === 'number') {
@@ -38,8 +38,8 @@
 
     function createNewID() {
       return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
-        var r = Math.random()*16|0, v = c == 'x' ? r : (r&0x3|0x8);
-        return v.toString(16);
+        var r = Math.random()*16|0, v = c == 'x' ? r : (r&0x3|0x8)
+        return v.toString(16)
       });
     }
 
@@ -77,7 +77,6 @@
     var mbwebapp = Elm.Main.fullscreen()
 
     mbwebapp.ports.askDataCmdPort.subscribe(function (id) {
-      console.log("asked: " + id)
       mbwebapp.ports.getDataSubPort.send([id, reconstituteObject(id)])
     })
 
@@ -86,14 +85,14 @@
         var value = args[1]
         localStorage.setItem(id, JSON.stringify(flattenObject(value)))
         mbwebapp.ports.getDataSubPort.send([id, value])
-    });
+    })
 
     mbwebapp.ports.addItemCmdPort.subscribe(function (args) {
         var id = args[0]
         var index = args[1]
         var valueAtId = JSON.parse(localStorage.getItem(id))
         if (typeof valueAtId !== 'object' || !(Array.isArray(valueAtId))) {
-          console.log("ERROR: Request to add an item to a non-array data (id: " + id + ")");
+          console.log("ERROR: Request to add an item to a non-array data (id: " + id + ")")
         } else {
           var value = args[2]
           var shallowValue = flattenObject(value)
@@ -101,21 +100,21 @@
           localStorage.setItem(valueId, JSON.stringify(shallowValue))
           valueAtId.splice(index, 0, valueId)
           localStorage.setItem(id, JSON.stringify(valueAtId))
-          mbwebapp.ports.itemAddedSubPort.send([id, index, value, valueId]);
+          mbwebapp.ports.itemAddedSubPort.send([id, index, value, valueId])
         }
-    });
+    })
 
     mbwebapp.ports.removeItemCmdPort.subscribe(function (args) {
       var id = args[0]
       var index = args[1]
       var valueAtId = JSON.parse(localStorage.getItem(id))
       if (typeof valueAtId !== 'object' || !(Array.isArray(valueAtId))) {
-        console.log("ERROR: Request to add an item to a non-array data (id: " + id + ")");
+        console.log("ERROR: Request to add an item to a non-array data (id: " + id + ")")
       } else {
         localStorage.setItem(id, JSON.stringify(valueAtId.splice(index,1)))
       }
-      mbwebapp.ports.itemRemovedSubPort.send([id, index]);
-    });
+      mbwebapp.ports.itemRemovedSubPort.send([id, index])
+    })
 </script>
 
 </html>
